# grav_sim

./: .gitignore  CMakeLists.txt  main.cpp  main_qt.cpp  main_sdl.cpp
doc/: grav_sim.tex
gfx/: gfx.hpp  gfx_opengl.cpp  gfx_opengl.hpp
phy/: physics.cpp  physics.hpp  physics_simd_test.cpp  physics_simd_test.hpp
qt/: opengl_window.cpp  opengl_window.hpp  qt_window.cpp  qt_window.hpp
sdl/: sdl_window.cpp
